tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_64.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (x MOD 1223);
  (* error *)  p := (((- 1223) > 1) & r);
               z := ((((z + 1223) MOD 0) * ((+ 2) MOD 200)) * 200);
               q := q;
               p := p;
               p := (z = z);
               x := 0;
               y := 0;
               p := (((1 * (- 1)) MOD (- 1223)) < (+ (- 0)));
               p := ((z + 0) <= 0)
END Test12.